--- a/package.json
+++ b/package.json
@@ -4,5 +4,13 @@
   "main": "index.js",
   "repository": "https://github.com/bachtuyetx7chulun/Queue.git",
   "author": "bachtuyetx7chulun <contact.truongtrunghieu@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bull": "^3.20.1",
+    "express": "^4.17.1",
+    "nodemailer": "^6.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
