--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "repository": "https://github.com/bachtuyetx7chulun/Queue.git",
   "author": "bachtuyetx7chulun <contact.truongtrunghieu@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "npm-run-all -p dev:*",
+    "dev:server": "nodemon server.js",
+    "dev:queue": "nodemon queue.js"
+  },
   "dependencies": {
     "bull": "^3.20.1",
     "express": "^4.17.1",
+    "express-list-endpoints": "^5.0.0",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.5.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5"
   }
 }
